@@ -2,6 +2,10 @@
        Subversion servers file. (Stefan)
 - NEW: Context menu entries to resolve a conflicted file inside the commit
        dialog by using either "mine" or "theirs" directly. (Stefan)
+- CHG: The commit dialog doesn't interrupt the user entering a log message
+       anymore with a dialog box popping up about modifications inside
+       an external folder. Instead, a warning icon is shown in that case below
+       the file list control. (Stefan)
 - BUG: When fetching files to diff, the progress dialog shown while fetching
        the files from the repository always showed revision 1 instead of the
        real revision where the file was fetched from. (Stefan)
